[package]
name = "keller-xline"
version = "0.1.0"
edition = "2024"

[features]
default = ["embedded"]
embedded = ["dep:heapless"]
std = ["rmodbus/std", "thiserror/std"]
defmt = ["dep:defmt", "rmodbus/defmt", "heapless/defmt"]
serde = ["dep:serde", "rmodbus/serde"]

[dependencies]
bitflags = { version = "2.10.0", default-features = false }
defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.1", optional = true }
rmodbus = { version = "0.12.2", default-features = false }
serde = { version = "1.0.228", optional = true }
thiserror = { version = "2.0.17", default-features = false }
